--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^3.0.4",
     "@ionic/storage-angular": "^3.0.6",
+    "angular4-paystack": "^3.0.0",
     "cordova-android": "8.1.0",
     "google-libphonenumber": "^3.2.21",
     "jwt-decode": "^3.1.2",
