--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,15 +19,20 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "@capacitor/core": "2.2.0",
+    "@capacitor/android": "^2.4.7",
+    "@capacitor/core": "^2.4.7",
+    "@ionic-native/clipboard": "^5.33.1",
     "@ionic-native/core": "^5.0.7",
-    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/ionic-webview": "^5.33.1",
+    "@ionic-native/keyboard": "^5.33.1",
+    "@ionic-native/splash-screen": "^5.33.1",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^3.0.4",
     "@ionic/storage-angular": "^3.0.6",
     "angular4-paystack": "^3.0.0",
     "cordova-android": "8.1.0",
+    "cordova-clipboard": "^1.3.0",
     "google-libphonenumber": "^3.2.21",
     "jwt-decode": "^3.1.2",
     "rxjs": "~6.5.1",
@@ -35,12 +40,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
+    "@angular-devkit/build-angular": "^0.901.15",
     "@angular/cli": "~9.1.5",
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
-    "@capacitor/cli": "2.2.0",
+    "@capacitor/cli": "^2.4.7",
     "@ionic/angular-toolkit": "^2.1.1",
     "@ionic/lab": "^3.2.10",
     "@types/jasmine": "~3.5.0",
@@ -50,7 +55,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.5.0",
@@ -75,7 +80,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-clipboard": {}
     },
     "platforms": [
       "android"
