--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "cordova-android": "8.1.0",
     "cordova-clipboard": "^1.3.0",
     "google-libphonenumber": "^3.2.21",
+    "ionic-plugin-deeplinks": "^1.0.22",
     "jwt-decode": "^3.1.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
