upgrade user design and glitch fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "faio",
         "firstname",
+        "localstorage",
         "minlength",
         "resetpassword",
         "storageservice"
