--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@capacitor/core": "^2.4.7",
     "@ionic-native/clipboard": "^5.33.1",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/fingerprint-aio": "^5.34.0",
     "@ionic-native/ionic-webview": "^5.33.1",
     "@ionic-native/keyboard": "^5.33.1",
     "@ionic-native/splash-screen": "^5.33.1",
@@ -33,6 +34,7 @@
     "angular4-paystack": "^3.0.0",
     "cordova-android": "8.1.0",
     "cordova-clipboard": "^1.3.0",
+    "cordova-plugin-fingerprint-aio": "^4.0.2",
     "google-libphonenumber": "^3.2.21",
     "ionic-plugin-deeplinks": "^1.0.22",
     "jwt-decode": "^3.1.2",
