--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -22,7 +22,6 @@
     }
   },
   "server": {
-    "url": "http://192.168.8.101:8100",
-    "originalUrl": "http://192.168.8.100:8100"
+    "url": "http://192.168.8.100:8100"
   }
 }
