--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "angular4-paystack": "^3.0.0",
     "cordova-android": "8.1.0",
     "cordova-clipboard": "^1.3.0",
+    "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-fingerprint-aio": "^4.0.2",
     "google-libphonenumber": "^3.2.21",
     "ionic-plugin-deeplinks": "^1.0.22",
